--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.468.0",
     "axios": "^1.7.9",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
-<<<<<<< HEAD
-    "react-router-dom": "^6.28.0"
-=======
+    "react-router-dom": "^6.28.0",
     "zustand": "^5.0.2"
->>>>>>> 263c098fc7aa2624b13e8e4c40e8862be56e42b2
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
