--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
+    "react-router-dom": "^6.28.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
